src/objects/Apttus_Config2__RelatedAssetLineItem__c.object
<CustomObject>
    <description>Holds the relationships between asset line items</description>
    <fields>
        <fullName>Apttus_Config2__FromLineItemId__c</fullName>
        <description>ID of the asset line item (from)</description>
        <inlineHelpText>ID of the asset line item (from)</inlineHelpText>
        <label>From</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Related Asset Line Items (From)</relationshipLabel>
        <relationshipName>RelatedAssetLineItemsFrom</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelationTypeFrom__c</fullName>
        <description>The relation type (from)</description>
        <inlineHelpText>The relation type (from)</inlineHelpText>
        <label>Relation Type (From)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Is Amended By</fullName>
                </value>
                <value>
                    <fullName>Is Renewed By</fullName>
                </value>
                <value>
                    <fullName>Is Superseded By</fullName>
                </value>
                <value>
                    <fullName>Is Amendment For</fullName>
                </value>
                <value>
                    <fullName>Is Renewal For</fullName>
                </value>
                <value>
                    <fullName>Is Upgrade For</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelationTypeTo__c</fullName>
        <description>The relation type (to)</description>
        <inlineHelpText>The relation type (to)</inlineHelpText>
        <label>Relation Type (To)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Is Amendment For</fullName>
                </value>
                <value>
                    <fullName>Is Amended By</fullName>
                </value>
                <value>
                    <fullName>Is Renewal For</fullName>
                </value>
                <value>
                    <fullName>Is Renewed By</fullName>
                </value>
                <value>
                    <fullName>Is Upgrade For</fullName>
                </value>
                <value>
                    <fullName>Is Superseded By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ToLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related asset line item (To)</description>
        <inlineHelpText>ID of the related asset line item (To)</inlineHelpText>
        <label>To</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Related Asset Line Items (To)</relationshipLabel>
        <relationshipName>RelatedAssetLineItemsTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Asset Line Item</label>
    <nameField>
        <displayFormat>AI-{0000000000}</displayFormat>
        <label>Related Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Asset Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>